# linux

./: .config  .gitignore  Kbuild  MAINTAINERS  Makefile  README  README.md  ebpf_tests.config  index.html  meson.build  qemu-run.sh  raw  working_config.config  yes  yes.pub
arch/x86/: Makefile
bpf_trigger/: Makefile  README  vMallocTrigger.c  vmalloc_trigger_module.c
fs/: open.c
fs/ext4/: ext4.h  file.c  fsync.c  inode.c
hello/: Makefile  hello.c  trigger  trigger.c
include/asm-generic/: error-injection.h
include/linux/: bpf.h  bpf_verifier.h  export.h  filter.h  gfp.h  gfp_types.h  kprobes.h  sched.h  smp.h  syscalls.h  test_resource.h  trace_events.h  tracepoint-defs.h  tracepoint.h  unwind_list.h  uts.h
include/net/: ip6_route.h  xdp.h
init/: main.c
kernel/: Makefile  fork.c  kprobes.c  smp.c  sys_ni.c  text_poke.c  tracepoint.c
kernel/bpf/: Kconfig  Makefile  Session.vim  arraymap.c  bpf_iter.c  btf.c  core.c  hashtab.c  helpers.c  helpers.c.rej  rex.c  rex_termination.c  syscall.c  unwind.c  unwind_list.h  verifier.c  verifier.c.rej
kernel/events/: core.c
kernel/sched/: core.c  idle.c  sched.h
kernel/time/: timekeeping.c
kernel/trace/: Makefile  bpf_trace.c  read_write_to_heaps.c  read_write_to_heaps.h  trace_event_perf.c  trace_kprobe.c  trace_syscalls.c
mm/: memory.c  mempolicy.c
net/: socket.c
net/core/: filter.c  filter.c.rej
net/ipv6/: ip6_fib.c  route.c
samples/bpf/: .gitignore  Makefile  array_test  array_test_kern.c  array_test_user.c  hash_test  hash_test_kern.c  hello  hello_user.c  long_running1_kern.c  long_running1_user.c  loops  loops_kern.c  loops_user.c  recursive  recursive_kern.c  recursive_user.c  reference_tracking.c  sid_fentry_test1_kern.c  sid_fentry_test1_user.c  sid_fentry_test2_kern.c  sid_fentry_test2_user.c  sid_fentry_test3_kern.c  sid_fentry_test3_user.c  sid_klp_fib6_run_gc_user.c  sid_kprobe_interrupt_check_kern.c  sid_tailcall_bpf_maxstack_fentry  sid_tailcall_bpf_maxstack_fentry2_kern.c  sid_tailcall_bpf_maxstack_fentry_kern.c  sid_tailcall_bpf_maxstack_kern.c  spinlock_cleanup_benchmark_kern.c  spinlock_cleanup_benchmark_user.c  static_u64_test  syscall_tp_kern.c  syscall_tp_user.c  test_kfunc_kern.c  test_skbuff_kern.c  time_spinlock_user.c  tracex9  (+11 more)
saterm/: Makefile  saterm-test.c  saterm.c
scripts/: bpf_doc.py  link-vmlinux.sh
(+65 files in other folders)
